--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,31 @@
 
 ## Python
 __pycache__/
+*.py[cod]
+*$py.class
+
+# Virtual environment
+venv/
+ENV/
+env/
+.venv/
+
+# Jupyter Notebook
+.ipynb_checkpoints
+
+# CLion
+.idea/
+cmake-build-debug/
+cmake-build-release/
+cmake-build-*
+*.iml
 
 # Test
 test*
+
+# Logs
+*.log
+
+# System files
+.DS_Store
+Thumbs.db
