add config makefile

--- a/Task_Management/Tests/Makefile
+++ b/Task_Management/Tests/Makefile
@@ -10,5 +10,7 @@ test_Date: $(OBJ)
 	$(CC) $(CFLAGS) $(INC) -o $(TARGET) $(OBJ)
 %.o: %.c
 	$(CC) $(CFLAGS) $(INC) -c $< -o $@
+run: test_Date
+	./$(TARGET)
 clean:
 	rm -f $(TARGET) $(OBJ)
