add file in CMakeList

--- a/Task_Management/CMakeLists.txt
+++ b/Task_Management/CMakeLists.txt
@@ -15,3 +15,17 @@ include_directories(
     Task
     UserData
 )
+
+# --- Custom clean rule ---
+# This will search recursively in the build directory for any .o or .out files
+file(GLOB_RECURSE EXTRA_FILES
+        "${CMAKE_BINARY_DIR}/*.o"
+        "${CMAKE_BINARY_DIR}/*.out"
+)
+
+# Define a custom target "clean_extra" to remove these files
+add_custom_target(clean_extra
+        COMMAND ${CMAKE_COMMAND} -E echo "Removing extra files (.o and .out)..."
+        COMMAND ${CMAKE_COMMAND} -E remove ${EXTRA_FILES}
+        COMMENT "Cleaning extra .o and .out files from the build tree"
+)
